<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_action_edit_holo_dark"
        android:visible="false"
        android:title="@string/venue_details_edit_button"/>

	<item
        android:id="@+id/action_categories"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_categories_holo_dark"
        android:visible="true"
        android:title="@string/venue_details_edit_categories_button"/>

	<item
        android:id="@+id/action_flag"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_flag_holo_dark"
        android:visible="true"
        android:title="@string/venue_details_dialog_flag_venue"/>

	<item
        android:id="@+id/action_duplicate"
        android:orderInCategory="103"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_duplicate_holo_dark"
        android:visible="true"
        android:title="@string/venue_details_duplicate_button"/>

	<item
        android:id="@+id/action_foursquare"
        android:orderInCategory="104"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_foursquare_new_holo_dark"
        android:title="@string/action_foursquare"/>
</menu>