<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/linearLayoutWelcomeWrapper"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/toolbarWelcome">

        <TextView
            android:id="@+id/textViewWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/textViewWelcomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/imageViewSoup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:contentDescription="@string/image_description_soup"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:scaleType="fitCenter"
            android:src="@drawable/soup_icon_giant"/>

        <ImageView
            android:id="@+id/imageViewPoweredByFoursquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description_powered_by_foursquare"
            android:scaleType="fitCenter"
            android:src="@drawable/foursquare_powered"/>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarWelcome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:theme="@style/Theme.Soup.PopupOverlay" />
</RelativeLayout>